--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,15 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+        <!--- Display posts -->
+        <ul>
+          {% for post in site.posts %}
+          <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+        <!--- End Display posts -->
       </header>
       <section>
 
