--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         </ul>
         {% endif %}
         <!--- Display posts -->
-        <ul>
+        <ul class="posts">
           {% for post in site.posts %}
           <li>
             <a href="{{ post.url }}">{{ post.title }}</a>
