--- a/_includes/post-detail.html
+++ b/_includes/post-detail.html
@@ -1,5 +1,5 @@
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
+<h1>{{ title | page.title }}</h1>
 
 <p class="view">by {{ page.author | default: site.author }}</p>
 
