--- a/_includes/post-detail.html
+++ b/_includes/post-detail.html
@@ -1,7 +1,7 @@
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ title | page.title }}</h1>
+<small>{{ custom-date | page.date | date: "%-d %B %Y" }}</small>
+<h1>{{ custom-title | page.title }}</h1>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+<p class="view">by {{ custom-author | page.author | default: site.author }}</p>
 
 {{content}}
 
