--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,3 +5,12 @@ layout: content_page
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
 {{ content }}
+
+<h2>Other posts</h2>
+<ul>
+    {% for post in site.posts %}
+    <li>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
