--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,4 @@ layout: content_page
 
 {{ content }}
 
-<h2>Other posts</h2>
-<ul>
-    {% for post in site.posts %}
-    <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-    {% endfor %}
-</ul>
+{% include recent_posts.html %}
